force-app/main/default/objects/Scheduled_Payment__c/Scheduled_Payment__c.object-meta.xml
<CustomObject>
    <label>Scheduled Payment</label>
    <nameField>
        <displayFormat>PS-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>