force-app/main/default/objects/Scheduled_Payment__c/fields/AFT_File_Number__c.field-meta.xml
<CustomField>
    <fullName>AFT_File_Number__c</fullName>
    <label>AFT File Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>