force-app/main/default/objects/Scheduled_Payment__c/fields/BIA_PPSA_LL_Verified__c.field-meta.xml
<CustomField>
    <fullName>BIA_PPSA_LL_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BIA/PPSA/LL Verified</label>
    <type>Checkbox</type>
</CustomField>