force-app/main/default/objects/Scheduled_Payment__c/fields/Calculated_Drawdown_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Drawdown_Date__c</fullName>
    <formula>IF(
				ISBLANK(First_Sent_to_Bank_Date__c),
				DATEVALUE(Sent_to_Bank_Date__c),
				DATEVALUE(First_Sent_to_Bank_Date__c)
)</formula>
    <label>Calculated Drawdown Date</label>
    <type>Date</type>
</CustomField>