force-app/main/default/objects/Scheduled_Payment__c/fields/Can_Be_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Can_Be_Reversed__c</fullName>
    <formula>Drawdown__r.Can_Be_Reversed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Be Reversed</label>
    <type>Checkbox</type>
</CustomField>