force-app/main/default/objects/Scheduled_Payment__c/fields/CountAgainstOppAmount__c.field-meta.xml
<CustomField>
    <fullName>CountAgainstOppAmount__c</fullName>
    <formula>AND(
    NOT(Drawdown_Created__c),
    IF(ISPICKVAL(Payment_Type__c, &apos;Scheduled Facility&apos;),
        NOT(OR(ISPICKVAL(Status__c, &apos;Rejected&apos;), ISPICKVAL(Status__c, &apos;Scheduled&apos;))),
        TRUE
    ),
    NOT(ISPICKVAL(Payment_Type__c, &apos;Treatment&apos;))
)</formula>
    <label>CountAgainstOppAmount</label>
    <type>Checkbox</type>
</CustomField>