force-app/main/default/objects/Scheduled_Payment__c/fields/Current_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_Name__c</fullName>
    <formula>IF(
    ISBLANK(Account__c),
    Opportunity__r.Account.Name,
    Account__r.Name
)</formula>
    <label>Current Account Name</label>
    <type>Text</type>
</CustomField>