force-app/main/default/objects/Scheduled_Payment__c/fields/Current_Account_URL__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_URL__c</fullName>
    <formula>&apos;/&apos; + Current_Account_Id__c</formula>
    <label>Current Account URL</label>
    <type>Text</type>
</CustomField>