force-app/main/default/objects/Scheduled_Payment__c/fields/Current_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Bank_Account_Name__c</fullName>
    <description>Gets the bank account name that would currently be used if the payment was processed.</description>
    <formula>IF(
    Send_Cheque__c,
    &apos;SEND CHEQUE to &apos; + IF(ISBLANK(Account__c), Opportunity__r.Account.Name, Account__r.Name),
    IF(
        ISBLANK(Sent_to_Bank_Account__c),
        IF(
            Use_Primary_Bank_Account__c,
            IF(
                OR(ISBLANK(Account__c), Account__c = Opportunity__r.AccountId),
                IF(
                    ISBLANK(Opportunity__r.Account.Primary_Bank_Account__c),
                    &apos;**NONE SELECTED**&apos;,
                    Opportunity__r.Account.Primary_Bank_Account__r.Name
                ),
                IF(
                    ISBLANK(Account__r.Primary_Bank_Account__c),
                    &apos;**NONE SELECTED**&apos;,
                    Account__r.Name + &apos; - &apos; + Account__r.Primary_Bank_Account__r.Name
                )
            ),
            IF(
                ISBLANK(Bank_Account__c),
                &apos;**NONE SELECTED**&apos;,
                IF(
                    NOT(Bank_Account__r.Client__c = Opportunity__r.AccountId),
                    Bank_Account__r.Client__r.Name + &apos; - &apos; + Bank_Account__r.Name,
                    Bank_Account__r.Name
                )
            )
        ),
        Sent_to_Bank_Account__r.Name
    )
)</formula>
    <label>Current Bank Account Name</label>
    <type>Text</type>
</CustomField>