force-app/main/default/objects/Scheduled_Payment__c/fields/Current_Bank_Account_URL__c.field-meta.xml
<CustomField>
    <fullName>Current_Bank_Account_URL__c</fullName>
    <formula>&apos;/&apos; +
IF(
				ISBLANK(Current_Bank_Account_Id__c),
				IF(
								ISBLANK(Account__c),
								Opportunity__r.AccountId,
								Account__c
				),
				Current_Bank_Account_Id__c
)</formula>
    <label>Current Bank Account URL</label>
    <type>Text</type>
</CustomField>