force-app/main/default/objects/Scheduled_Payment__c/fields/Current_Opportunity_Schedule_Version_Val__c.field-meta.xml
<CustomField>
    <fullName>Current_Opportunity_Schedule_Version_Val__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Had to move this away from the formula I was using for roll-up filtering</description>
    <label>Current Opportunity Schedule Version Val</label>
    <type>Checkbox</type>
</CustomField>