force-app/main/default/objects/Scheduled_Payment__c/fields/CWB_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>CWB_Business_Unit__c</fullName>
    <label>CWB Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>