force-app/main/default/objects/Scheduled_Payment__c/fields/CWB_Sheet_Number__c.field-meta.xml
<CustomField>
    <fullName>CWB_Sheet_Number__c</fullName>
    <formula>IF(AFT_File_Number__c &gt; 0,  CWB_Business_Unit__c + &quot; - &quot; + LPAD(TEXT(AFT_File_Number__c), 4, &apos;0&apos;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CWB Sheet Number</label>
    <type>Text</type>
</CustomField>