force-app/main/default/objects/Scheduled_Payment__c/fields/CWB_Sheet_Number_CSS__c.field-meta.xml
<CustomField>
    <fullName>CWB_Sheet_Number_CSS__c</fullName>
    <formula>IF(AFT_File_Number__c &gt; 0, &quot;slds-icon-custom-custom51 slds-text-color_error slds-text-title_bold&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CWB Sheet Number CSS</label>
    <type>Text</type>
</CustomField>