force-app/main/default/objects/Scheduled_Payment__c/fields/Days_Since_Sent__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Sent__c</fullName>
    <formula>IF(
				ISNULL(Sent_to_Bank_Date__c),
				NULL,
				TODAY() - DATEVALUE(Sent_to_Bank_Date__c)
)</formula>
    <label>Days Since Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>