force-app/main/default/objects/Scheduled_Payment__c/fields/Drawdown_Created__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drawdown Created</label>
    <type>Checkbox</type>
</CustomField>