force-app/main/default/objects/Scheduled_Payment__c/fields/Drawdown_Date__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Date__c</fullName>
    <formula>Drawdown__r.Date__c</formula>
    <label>Drawdown Date</label>
    <type>Date</type>
</CustomField>