force-app/main/default/objects/Scheduled_Payment__c/fields/EFT_File__c.field-meta.xml
<CustomField>
    <fullName>EFT_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EFT File</label>
    <referenceTo>EFT_File__c</referenceTo>
    <relationshipLabel>Scheduled Payments</relationshipLabel>
    <relationshipName>Scheduled_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>