force-app/main/default/objects/Scheduled_Payment__c/fields/Expected_Admin_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Admin_Fee_Amount__c</fullName>
    <description>If it&apos;s the first scheduled payment and the admin fee drawdown has not been created, return the Admin_Fee__c from the opp else 0</description>
    <formula>IF(
				AND( 
								First_Scheduled_Payment__c,
								Opportunity__r.Admin_Fee_Roll_up__c = 0
				),
				Opportunity__r.Admin_Fee__c,
				0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Admin Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>