force-app/main/default/objects/Scheduled_Payment__c/fields/File_Number__c.field-meta.xml
<CustomField>
    <fullName>File_Number__c</fullName>
    <formula>EFT_File__r.File_Number__c</formula>
    <label>File Number</label>
    <type>Text</type>
</CustomField>