force-app/main/default/objects/Scheduled_Payment__c/fields/First_Scheduled_Payment__c.field-meta.xml
<CustomField>
    <fullName>First_Scheduled_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track which Scheduled Payment is the first occurring scheduled payment</description>
    <label>First Scheduled Payment</label>
    <type>Checkbox</type>
</CustomField>