force-app/main/default/objects/Scheduled_Payment__c/fields/ForceCountAgainstTotal__c.field-meta.xml
<CustomField>
    <fullName>ForceCountAgainstTotal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Primarily used to force in-process payments to be included in the amount calculations on the opportunity as rollups aren&apos;t flexible enough to handle this themselves.</inlineHelpText>
    <label>ForceCountAgainstTotal</label>
    <type>Checkbox</type>
</CustomField>