force-app/main/default/objects/Scheduled_Payment__c/fields/Hold__c.field-meta.xml
<CustomField>
    <fullName>Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not allow this payment to processed for now.</inlineHelpText>
    <label>Hold</label>
    <type>Checkbox</type>
</CustomField>