force-app/main/default/objects/Scheduled_Payment__c/fields/Opportunity_Schedule_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Schedule_Version_Number__c</fullName>
    <description>The version number of the payment schedule from the parent opportunity. (only applicable for scheduled facility payments)</description>
    <externalId>true</externalId>
    <label>Opportunity Schedule Version Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>