force-app/main/default/objects/Scheduled_Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lump-Sum</fullName>
            </value>
            <value>
                <fullName>Ad-Hoc</fullName>
            </value>
            <value>
                <fullName>Scheduled Facility</fullName>
            </value>
            <value>
                <fullName>Treatment</fullName>
            </value>
            <value>
                <fullName>Payment to Other Lender</fullName>
            </value>
            <value>
                <fullName>Loan Payout</fullName>
                <isActive>false</isActive>
                <label>Loan Payout</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>