force-app/main/default/objects/Scheduled_Payment__c/fields/Send_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Send_Cheque__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send a Cheque instead of an EFT</description>
    <label>Send Cheque</label>
    <type>Checkbox</type>
</CustomField>