force-app/main/default/objects/Scheduled_Payment__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <formula>NOT(ISBLANK( Sent_to_Bank_Date__c ))</formula>
    <label>Sent</label>
    <type>Checkbox</type>
</CustomField>