force-app/main/default/objects/Scheduled_Payment__c/fields/Sent_to_Bank_By__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Bank_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that generated the Banking Sheet this Payment was included in.</description>
    <label>Sent to Bank By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scheduled_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>