force-app/main/default/objects/Scheduled_Payment__c/fields/Sent_to_Bank_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Bank_Date__c</fullName>
    <description>Date and Time this payment was included in a banking sheet</description>
    <label>Sent to Bank Date</label>
    <type>DateTime</type>
</CustomField>