force-app/main/default/objects/Scheduled_Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Pre Send Validation</fullName>
            </value>
            <value>
                <fullName>Approved to Send</fullName>
            </value>
            <value>
                <fullName>Sent to Bank</fullName>
            </value>
            <value>
                <fullName>Processed by Bank</fullName>
            </value>
            <value>
                <fullName>Drawdown Created</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Won&apos;t Send</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>