force-app/main/default/objects/Scheduled_Payment__c/fields/Transaction_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reference_Number__c</fullName>
    <description>Reference number to match EFT to Scheduled Payments (Date Sent + Random Digits)</description>
    <label>Transaction Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>