force-app/main/default/objects/Scheduled_Payment__c/fields/Triggered_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Admin_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did this payment trigger the admin fee drawdown to be created?</description>
    <label>Triggered Admin Fee</label>
    <type>Checkbox</type>
</CustomField>