force-app/main/default/objects/Scheduled_Payment__c/fields/Triggered_Admin_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Admin_Fee_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Triggered Admin Fee Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>