force-app/main/default/objects/Scheduled_Payment__c/fields/Use_Primary_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Use_Primary_Bank_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should use primary bank account from Account if it&apos;s chosen or Opportunity&apos;s Account otherwise.</description>
    <label>Use Primary Bank Account</label>
    <type>Checkbox</type>
</CustomField>